--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="regresar">Back</string>
     <string name="edt_cantidad">$ 0.00</string>
     <string name="edt_agregar">Egreso</string>
+    <string name="mi_texto"><u>Recomendaciones</u></string>
+    <string name="tip1"><u>#Tip 1</u></string>
+    <string name="tip2"><u>#Tip 2</u></string>
 
 </resources>
