--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,8 @@
     <string name="mi_texto"><u>Recomendaciones</u></string>
     <string name="tip1"><u>#Tip 1</u></string>
     <string name="tip2"><u>#Tip 2</u></string>
+    <string name="tip3"><u>#Tip 3</u></string>
+    <string name="recomendaciones">Recomendaciones</string>
+    <string name="layout5_rec">Te dejamos algunas:</string>
 
 </resources>
