--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,10 @@
     <string name="tip2"><u>#Tip 2</u></string>
     <string name="tip3"><u>#Tip 3</u></string>
     <string name="recomendaciones">Recomendaciones</string>
+    <string name="tip1_1">#Tip 1</string>
+    <string name="tip2_2">#Tip 2</string>
+    <string name="tip3_3">#Tip 3</string>
     <string name="layout5_rec">Te dejamos algunas:</string>
+    <string name="layout8_rec">Que tus gastos no excedan la cantidad de tus ingresos...</string>
 
 </resources>
