--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">prueba</string>
+    <string name="app_name">Mi Marranito</string>
     <string name="btn_configuracion">Configuración</string>
     <string name="btn_resumen">Resumen</string>
     <string name="btn_historial">Historial</string>
