--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="layout2_rec">Registrar tus gastos contribuirá a ser  más conciente de tus egresos.</string>
     <string name="layout4_rec">Que tus gastos no excedan la cantidad de tus ingresos.</string>
     <string name="layout6_rec">Establezca prioridades financieras. Priorizar metas contribuye a una mejor distribuicion.</string>
+    <string name="layout8_rec">Establezca prioridades financieras. Priorizar metas contribuye a una mejor distribuicion.</string>
     <string name="txtVConf1">¿Con que frecuencia obtienes ingresos?</string>
     <string name="txtVConf2">¿Cual es el periodo?</string>
     <string name="txtVConf3">Monto</string>
