--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,11 +17,11 @@
     <string name="tip1_1">#Tip 1</string>
     <string name="tip2_2">#Tip 2</string>
     <string name="tip3_3">#Tip 3</string>
-    <string name="tip4_4">Más info</string>
+    <string name="tip4_4">Escribenos</string>
     <string name="layout2_rec">Registrar tus gastos contribuirá a ser  más conciente de tus egresos.</string>
     <string name="layout4_rec">Que tus gastos no excedan la cantidad de tus ingresos.</string>
-    <string name="layout6_rec">Establezca prioridades financieras. Priorizar metas contribuye a una mejor distribuicion.</string>
-    <string name="layout8_rec">Establezca prioridades financieras. Priorizar metas contribuye a una mejor distribuicion.</string>
+    <string name="layout6_rec">Establezca prioridades financieras. Priorizar metas contribuye a una mejor distribuición.</string>
+    <string name="layout8_rec">mimarranito@recomendaciones.mx</string>
     <string name="txtVConf1">¿Con que frecuencia obtienes ingresos?</string>
     <string name="txtVConf2">¿Cual es el periodo?</string>
     <string name="txtVConf3">Monto</string>
